fixing z-index in button slideshow

--- a/crux-widgets/src/main/resources/org/cruxframework/crux/themes/widgets/xstandard/client/resource/large/cssXStandardLarge.css
+++ b/crux-widgets/src/main/resources/org/cruxframework/crux/themes/widgets/xstandard/client/resource/large/cssXStandardLarge.css
@@ -326,6 +326,7 @@ TABLE.menuTabsHeaderSplitPanel>TBODY>TR:first-child>TD
 	border: none;
 	position: relative;
 	cursor: pointer;
+	z-index: 9999;
 }
 .crux-RollingPanelPrevious:after, .crux-RollingPanelNext:after
 {
